[gd_scene load_steps=6 format=2]

[ext_resource path="res://network_setup.gd" type="Script" id=1]
[ext_resource path="res://Map.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 50, 50 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 25, 1, 25 )

[node name="Map" type="Spatial"]
transform = Transform( 0.98573, 0, -0.168335, 0, 1, 0, 0.168335, 0, 0.98573, 0, -0.0259341, 0 )
script = ExtResource( 2 )

[node name="NetworkSetup" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.5
margin_top = -184.5
margin_right = 250.5
margin_bottom = 184.5
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 90.0

[node name="IPaddress" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 350.0
margin_bottom = 24.0
align = 1
placeholder_text = "IP Address"

[node name="Host" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 40 )
text = "Host"

[node name="Join" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 72.0
margin_right = 350.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 40 )
text = "Join"

[node name="Floor" type="StaticBody" parent="."]

[node name="CSGMesh" type="CSGMesh" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00524807, 0 )
mesh = SubResource( 1 )
material = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.996356, 0.040014, 0.0753274, -0.0852938, 0.461598, 0.882979, 0.000560552, -0.886186, 0.463329, -0.0017227, 1.58723, 0.601366 )
shadow_enabled = true

[connection signal="text_changed" from="NetworkSetup/VBoxContainer/IPaddress" to="NetworkSetup" method="_on_IPaddress_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join" to="NetworkSetup" method="_on_Join_pressed"]
